fix guide overlap

--- a/css/base.css
+++ b/css/base.css
@@ -91,7 +91,7 @@ h1 {
 	position: absolute;
 	top:50px;
 	bottom: 0;
-	width: 60%;
+	width: 58%;
 	overflow: scroll;
 }
 
